--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3"
   },
@@ -29,6 +30,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
