--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
