--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.2",
     "yup": "^1.6.1"
   },
