--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,6 +39,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.15.21",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
