--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.2",
     "yup": "^1.6.1"
   },
